[metadata]
name = Cooperative Data-Driven Modeling (CDDM)
version = file: VERSION
author = Aleksandr Dekhovich
author_email = A.Dekhovich@tudelft.nl
description = Python code for reproducing the results from Cooperative Data-Driven Modeling article
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Data-driven modeling, Continual learning, Transfer learning, Plasticity
url = https://github.com/bessagroup/CDDM
license = MIT License
license_files = file: LICENSE
classifiers =
Development Status :: 4 - Beta
Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: MIT License
Natural Language :: English
Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
include_package_data = True
python_requires = >=3.6

[options.packages.find]
where=src